deploy/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jetci-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jetci-operator
  template:
    metadata:
      labels:
        name: jetci-operator
    spec:
      serviceAccountName: jetci-operator
      automountServiceAccountToken: true
      containers:
      - image: ghcr.io/scalabledelivery/jetci:master
        name: jetci-operator
        imagePullPolicy: Always
