deploy/webhook-endpoint.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jetci-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jetci-webhook
  template:
    metadata:
      labels:
        name: jetci-webhook
    spec:
      serviceAccountName: jetci-webhook
      automountServiceAccountToken: true
      containers:
      - image: scalabledelivery/jetci:v1alpha1
        name: jetci-webhook
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: jetci-webhook-http
          protocol: TCP
