deploy/webhook-endpoint-svc-example.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jetci-webhook
spec:
  selector:
    name: jetci-webhook
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    name: http
